<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".presenter.auth.home.HomeAuthFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/imageView3"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:layout_marginTop="32dp"
      android:src="@drawable/ic_image_home_auth"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ContentDescription" />

    <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="32dp"
      android:fontFamily="@font/urbanist_600"
      android:gravity="center"
      android:text="@string/title_home_auth_fragment"
      android:textColor="@color/black"
      android:textSize="36sp"
      app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
      android:id="@+id/btn_login_facebook"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginHorizontal="32dp"
      android:layout_marginTop="32dp"
      android:background="@drawable/style_button_social"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook"
        tools:ignore="ContentDescription" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/urbanist_600"
        android:text="@string/button_continue_with_facebook_home_auth_fragment"
        android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/btn_login_google"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginHorizontal="32dp"
      android:layout_marginTop="8dp"
      android:background="@drawable/style_button_social"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_login_facebook">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google"
        tools:ignore="ContentDescription" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/urbanist_600"
        android:text="@string/button_continue_with_google_home_auth_fragment"
        android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="32dp"
      android:layout_marginTop="32dp"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintTop_toBottomOf="@+id/btn_login_google"
      tools:layout_editor_absoluteX="32dp">

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@color/gray_100" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="@font/urbanist_600"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/text_social_or_password_home_auth_fragment" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@color/gray_100" />

    </LinearLayout>

    <Button
      android:id="@+id/button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="32dp"
      android:layout_marginTop="32dp"
      android:background="@drawable/bg_button"
      android:fontFamily="@font/urbanist_600"
      android:text="@string/button_sign_in_with_password_home_auth_fragment"
      android:textAllCaps="false"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="32dp"
      android:layout_marginTop="32dp"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button"
      app:layout_constraintVertical_bias="0.0">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_500"
        android:text="@string/text_dont_have_an_account_home_auth_fragment" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/urbanist_500"
        android:text="@string/text_sign_up_home_auth_fragment"
        android:textColor="@color/color_default" />

    </LinearLayout>


  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>